--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "~7.3.8",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -28,6 +31,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-bs": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
@@ -58,5 +62,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
   }
 }
